# medium-no-bait-cli

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
author_updates/: tracker.py
shared/: models.py  scraper.py  storage.py
src/medium_no_bait/: main.py
src/medium_no_bait/author_updates/: tracker.py
src/medium_no_bait/shared/: models.py  scraper.py  storage.py
