[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medium-no-bait-cli"
version = "0.1.2"
authors = [
  { name="Shashwat", email="forwardtoshashwat@gmail.com" },
]
description = "A distillation-first, no-bait Medium reader for the terminal"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
]

[project.urls]
"Homepage" = "https://github.com/hubshashwat/medium-no-bait-cli"
"Bug Tracker" = "https://github.com/hubshashwat/medium-no-bait-cli/issues"

[project.scripts]
mnb = "medium_no_bait.main:main"

[tool.setuptools.packages.find]
where = ["src"]
